--- a/ansible/roles/wordpress-builds/tasks/rbac.yml
+++ b/ansible/roles/wordpress-builds/tasks/rbac.yml
@@ -27,6 +27,9 @@
         - apiGroups: [""]
           resources: ["persistentvolumeclaims"]
           verbs: ["create", "get", "list", "patch"]
+        - apiGroups: ["apps"]
+          resources: ["deployments"]
+          verbs: ["create", "get", "list", "patch"]
 
 - name: wp-base/Tekton - RoleBinding
   kubernetes.core.k8s:
