[feature] Mirror `bitnami/nginx-ingress-controller` to Quay

--- a/ansible/vars/quay-vars.yml
+++ b/ansible/vars/quay-vars.yml
@@ -14,4 +14,8 @@ quay_botfather_token: >-
   {{ quay_secrets.quay.org_admin_token
   | eyaml(quay_secrets.eyaml_keys) }}
 
+# 💡 runner_credentials comes (you guessed it) from ./runner-credentials.yml
+ansible_quay_bearer_token: >-
+  {{ runner_credentials.quay_api.bearer_token | eyaml(runner_credentials.eyaml_keys) }}
+
 builder_robot_account_name: svc0041+builder_robot_account
