--- a/ansible/roles/wordpress-builds/tasks/tekton-for-PR.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton-for-PR.yml
@@ -12,13 +12,13 @@
     - https://api.hub.tekton.dev/v1/resource/tekton/task/git-clone/0.9/raw
     - https://github.com/openshift-pipelines/tektoncd-catalog/raw/p/tasks/task-buildah/0.6.0/task-buildah.yaml
 
-- name: wp-base/Tekton - Pipeline
+- name: wp-base/Tekton - Pipeline for PR
   kubernetes.core.k8s:
     definition:
       apiVersion: tekton.dev/v1
       kind: Pipeline
       metadata:
-        name: "{{ pipeline_name }}"
+        name: "{{ pipeline_name_for_pr }}"
         namespace: "{{ inventory_namespace }}"
       spec:
         params:
@@ -127,17 +127,17 @@
                         ]
                     }}}}'
 
-- name: wp-base/Tekton - CronJob
+- name: wp-base/Tekton - CronJob for PR
   kubernetes.core.k8s:
     definition:
       apiVersion: batch/v1
       kind: CronJob
       metadata:
-        name: "{{ run_pipeline_wp_base_build }}"
+        name: "{{ run_pipeline_wp_base_build_for_pr }}"
         namespace: "{{ inventory_namespace }}"
         labels:
           app.kubernetes.io/component: 'cronjob'
-          app.kubernetes.io/name: "{{ pipeline_name }}"
+          app.kubernetes.io/name: "{{ pipeline_name_for_pr }}"
       spec:
         timeZone: "Europe/Zurich"
         schedule: "*/10 * * * *"
@@ -161,7 +161,7 @@
                         apiVersion: v1
                         kind: PersistentVolumeClaim
                         metadata:
-                          name: tekton-scratch # TODO we need to change PVC for each build
+                          name: tekton-scratch
                           namespace: "{{ inventory_namespace }}"
                         spec:
                           accessModes:
@@ -174,13 +174,13 @@
                         apiVersion: tekton.dev/v1beta1
                         kind: PipelineRun
                         metadata:
-                          name: "{{ run_pipeline_wp_base_build }}-$(date -u +%Y%m%d-%H%Mz)"
+                          name: "{{ run_pipeline_wp_base_build_for_pr }}-$(date -u +%Y%m%d-%H%Mz)"
                           namespace: "{{ inventory_namespace }}"
                         spec:
                           timeout: "2h"
                           serviceAccountName: "{{ wp_base_builder_buildah_service_account }}"
                           pipelineRef:
-                            name: "{{ pipeline_name }}"
+                            name: "{{ pipeline_name_for_pr }}"
                           params:
                             - name: next-build-id
                               value: 2025-136-auto
